# easy-agent

./: .gitignore  README.md  main.py  pyproject.toml
.agents/skills/trellis-brainstorm/: SKILL.md
.agents/skills/trellis-finish-work/: SKILL.md
.claude/commands/trellis/: finish-work.md
.trellis/: .template-hashes.json  .version
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/05-11-first-linear-layer/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-11-first-week-trellis-setup/: check.jsonl  task.json
.trellis/tasks/05-11-torch-reference-module-convention/: implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-11-first-linear-layer/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-first-week-trellis-setup/: implement.jsonl  info.md  prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-torch-reference-module-convention/: check.jsonl  task.json
.trellis/workspace/zyren/: index.md  journal-1.md
agents/: README.md
foundations/: README.md
foundations/01-linear-layer/: README.md  lesson.ipynb  lesson.py  linear_layer.ipynb  linear_layer.py
src/ai_edu/: __init__.py
src/ai_edu/agents/: __init__.py
src/ai_edu/foundations/: __init__.py  linear_layer.py
src/ai_edu/training/: __init__.py
tests/: conftest.py  test_curriculum_layout.py  test_linear_layer.py
training/: README.md
