[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-edu"
version = "0.1.0"
description = "Python-first AI education repository scaffolded with Trellis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_edu"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ai_edu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
