[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-edu"
version = "0.1.0"
description = "Python-first AI education repository scaffolded with Trellis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
torch = ["torch"]

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["foundations", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
